# crustoxy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  entrypoint.sh  logs  openai_payload_debug.json
.claude/: settings.local.json
.github/workflows/: ci.yaml
src/: auth.rs  config.rs  config_loader.rs  config_watcher.rs  converter.rs  heuristic_tool_parser.rs  ip_rotator.rs  key_pool.rs  main.rs  model_router.rs  optimization.rs  panel_config.rs  rate_limiter.rs  routes.rs  rtk.rs  sse.rs  think_parser.rs  tool_intent_detector.rs
src/models/: anthropic.rs  openai.rs
src/panel/: api.rs  mod.rs
src/panel/assets/: app.js  index.html  styles.css
src/providers/: cloudflare.rs  mod.rs  openai_compat.rs  puter.rs
src/providers/kimi_oauth/: auth.rs  mod.rs  provider.rs  translate.rs
src/providers/windsurf/: accounts.rs  builders.rs  grpc.rs  ls.rs  mod.rs  models.rs  parsers.rs  proto.rs
